<resources>
    <string name="app_name">Millionaire</string>
    <string name="log_in">Log In</string>
    <string name="glad_to_see_you">Glad to see you!</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="get">Get</string>
    <string name="verification_code">Verification Code</string>
    <string name="click_get_and_we_will_send_a_verification_code_to_your_email">Click "GET" and we will send a verification code to your email.</string>
    <string name="reset_password">Reset Password</string>
    <string name="register_success">Register Success!</string>
    <string name="password_reset_successfully">Password Reset Successfully!</string>
    <string name="click_the_button_below_to_continue">Click the button below to continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="moment">Moment</string>
    <string name="friend">Friend</string>
    <string name="user">User</string>
    <string name="login">Login</string>
    <string name="info">Info</string>
    <string name="pay">Pay</string>
    <string name="homepage">Homepage</string>
    <string name="order">Order</string>
    <string name="trade">Trade</string>
    <string name="identification">Identification</string>
    <string name="setting">Setting</string>
    <string name="spread">Spread</string>
    <string name="order_dispatch">Order Dispatch</string>
    <string name="order_taking">Order Taking</string>
    <string name="avatar">Avatar</string>
    <string name="nickname">Nick Name</string>
    <string name="account">Account</string>
    <string name="gender">Gender</string>
    <string name="region">Region</string>
    <string name="profile">Profile</string>
    <string name="qr_code">QR Code</string>
    <string name="show_setting">Show Setting</string>
    <string name="privacy_agreement">Privacy Agreement</string>
    <string name="time_value">Time:%s</string>
</resources>