<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@mipmap/ic_logo"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/theme_main"
            android:text="@string/log_in"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textColor="@color/text_sub"
            android:text="@string/glad_to_see_you"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="35dp"
            android:hint="@string/e_mail"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textSize="18sp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColorHint="@color/white_half_transparent"
            android:textColor="@color/white"
            android:background="@drawable/shape_input_bg"
            android:singleLine="true"
            android:maxLength="30"
            android:imeOptions="actionNext"/>
        <com.surromo.common.widget.MEditText
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="30dp"
            android:hint="@string/password"
            android:textSize="18sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingStart="30dp"
            android:singleLine="true"
            android:maxLength="25"
            android:textColorHint="@color/white_half_transparent"
            android:textColor="@color/white"
            android:background="@drawable/shape_input_bg"
            android:paddingEnd="25dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="70dp"
                android:text="@string/register"
                android:textColor="@color/text_main"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginEnd="70dp"
                android:text="@string/forgot_password"
                android:textColor="@color/text_main"
                android:textSize="12sp" />
        </RelativeLayout>
        <ImageView
            android:layout_width="61dp"
            android:layout_height="61dp"
            android:layout_marginTop="40dp"
            android:src="@mipmap/ic_step_next"
            android:contentDescription="@string/next"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="75dp">
            <View
                android:layout_width="52dp"
                android:layout_height="0.5dp"
                android:background="@color/line"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/line"
                android:textSize="7sp"/>
            <View
                android:layout_width="52dp"
                android:layout_height="0.5dp"
                android:background="@color/line"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_twitter"
                android:layout_marginEnd="45dp"
                android:contentDescription="@string/twitter"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_facebook"
                android:contentDescription="@string/facebook"/>
        </LinearLayout>
    </LinearLayout>
</layout>